chore: adapt LunaticXML post processors